# e-dpo-experiment

./: pyproject.toml  requirements.txt
configs/: llama3_instruct.yaml  mistral_instruct.yaml
evaluation/: README.md  __init__.py  decode.py  pipeline.py  post_process.py  reward_model_annotate.py  run_benchmarks.py
evaluation/benchmarks/: README.md
evaluation/benchmarks/alpacaeval2/configs/: Llama-3-Instruct-8B-epo.yaml
scripts/: run_edpo_train.sh
