[project]
name = "e-dpo-experiment"
version = "0.1.0"
description = "Epsilon-DPO training and evaluation pipelines."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "wandb",
    "omegaconf==2.3.0",
    "transformers==4.48.3",
    "datasets==3.2.0",
    "trl==0.13.0",
    "accelerate==1.2.1",
    "deepspeed==0.16.2",
    "numpy==1.26.4",
    "tqdm==4.67.1",
    "torch==2.5.1",
    "vllm==0.7.2",
    "alpaca_eval==0.6.6",
    "fschat==0.2.36",
    "openai==1.61.1",
    "pydantic==2.11.7",
    "setuptools==75.8.0",
    "wheel==0.45.1",
]

[project.optional-dependencies]
accel = [
    "flash-attn==2.7.4.post1 ; platform_system == 'Linux' and python_version == '3.10'",
    "flashinfer-python==0.2.2 ; platform_system == 'Linux' and python_version == '3.10'",
]

[tool.uv]
package = false
